package com.company;

/**
 * The main method which runs the Snake game.
 *
 * @author Lucas Champoux, Trevor Martin, Raunak Shahi
 * @version 2.0
 */
public final class Main {

    /**
     * The main method executed at runtime.
     * @param args Any arguments given at runtime.
     */
    public static void main(final String[] args) {
        new MenuFrame();
    }

    /**
     * The default constructor. Do not instantiate this class.
     */
    private Main() {
    }


}
