@startuml

title __SNAKE's Class Diagram__\n

  namespace  {
    namespace om.company {
      class com.company.GameBoard {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.Main {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.MenuFrame {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.MenuPanel {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.SaveHandler {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.SnakeFrame {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.SnakeNode {
      }
    }
  }
  

  namespace  {
    namespace om.company {
      class com.company.SnakePanel {
      }
    }
  }
  

  com.company.GameBoard o-- com.company.SnakeNode : head
  com.company.GameBoard o-- com.company.SnakeNode : tail
  com.company.MenuFrame -up-|> javax.swing.JFrame
  com.company.MenuPanel .up.|> java.awt.event.ActionListener
  com.company.MenuPanel -up-|> javax.swing.JPanel
  com.company.SnakeFrame -up-|> javax.swing.JFrame
  com.company.SnakeNode o-- com.company.SnakeNode : next
  com.company.SnakeNode o-- com.company.SnakeNode : previous
  com.company.SnakePanel .up.|> java.awt.event.ActionListener
  com.company.SnakePanel -up-|> javax.swing.JPanel
  com.company.SnakePanel o-- com.company.GameBoard : gameBoard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
